--- a/style.css
+++ b/style.css
@@ -7,9 +7,16 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+html,body{
+    height: 100%;
+}
+
 body{
     background-color: rgb(194, 223, 194);
+    position: relative;
 }
+
+
 
 img{
     width: 30px;
@@ -78,3 +85,42 @@ img{
 #books .read{
     background-color: rgb(107, 196, 107);
 }
+
+
+/*-------FORM----------*/
+form > button{
+    width: 100%;
+}
+
+form > input{
+    width: 90%;
+}
+
+.floating{
+    padding: 20px;
+    width: 15%;
+    position: absolute;
+    top: 30%;
+    left: 40%;
+    background-color: white;
+}
+
+.hidden{
+    display: none;
+}
+
+.floating > button{
+    margin-top: 5px;
+}
+
+
+label{
+    width: 50%;
+}
+
+#read{
+    width: 10%;
+    margin-left: 0;
+}
+
+
